# earthbound-decomp-codex

./: .gitattributes  .gitignore  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md
asset-manifests/: bank-ca-assets.json  bank-cb-assets.json  bank-cc-assets.json  bank-cd-assets.json  bank-ce-assets.json  bank-cf-assets.json  bank-d0-assets.json  bank-d1-assets.json  bank-d2-assets.json  bank-d3-assets.json  bank-d4-assets.json  bank-d5-assets.json  bank-d6-assets.json  bank-d7-assets.json  bank-d8-assets.json  bank-d9-assets.json  bank-da-assets.json  bank-db-assets.json  bank-dc-assets.json  bank-dd-assets.json  bank-de-assets.json  bank-df-assets.json  bank-e0-assets.json  bank-e1-assets.json  bank-e2-assets.json  bank-e4-assets.json  bank-e7-assets.json  bank-e9-assets.json  bank-ea-assets.json  bank-ec-assets.json  bank-ed-assets.json  bank-ee-assets.json  ef-debug-assets.json
encyclopedia/: .gitignore  README.md  RELEASE-LICENSES.md  package-lock.json  package.json
manifests/: audio-backend-contract.json  audio-cpu-mailbox-contract.json  audio-duration-next-actions-plan.json  audio-duration-readiness-rollup.json  audio-duration-uncertainty-register.json  audio-ebdecompile-ref-alignment.json  audio-exact-duration-triage.json  audio-export-plan.json  audio-fd-fe-timing-frontier.json  audio-ff-terminator-review.json  audio-finite-ending-evidence-plan.json  audio-finite-ending-tail-metrics.json  audio-finite-transition-classification-packet.json  audio-independent-oracle-campaign-plan.json  audio-independent-oracle-capture-packet.json  audio-independent-oracle-coverage-report.json  audio-independent-oracle-handoff-matrix.json  audio-loop-hold-classification-packet.json  audio-loop-point-evidence-plan.json  audio-nonzero-control-coverage-report.json  audio-nonzero-control-probe-plan.json  audio-nonzero-control-semantics-frontier.json  audio-oracle-comparison-plan-all-tracks.json  audio-oracle-comparison-plan.json  audio-oracle-source-evidence-preflight.json  audio-oracle-source-regeneration-plan.json  audio-oracle-verification-report-all-tracks.json  audio-oracle-verification-report.json  audio-probe-campaign-plan.json  audio-residual-uncertainty-coverage-report.json  audio-sequence-command-semantics.json  audio-sequence-pack-025-semantics.json  audio-sequence-semantics-intake-plan.json  audio-sequence-walk-frontier.json  audio-spc-state-frontier.json  audio-spc700-control-reader-frontier.json  audio-spc700-dispatch-trace-frontier.json  audio-spc700-driver-dispatch-frontier.json  audio-spc700-ff-target-review.json  audio-spc700-sounddriver-source-ingest.json  (+33 more)
notes/: actionscript-wrapper-strip-c0a841-c0aafd.md  active-text-entry-chain-layout-c451fa.md  active-window-text-tile-pair-placement-c44c8c.md  ares-audio-backend-prototype.md  asset-data-contract-frontier.md  asset-manifest-generation-status.md  asset-output-bank-fixture-audit.md  asset-output-codec-validation.md  asset-output-index.md  asset-output-path-audit.md  asset-output-preview-geometry.md  asset-output-raw-only-audit.md  asset-output-recipe-contracts.md  asset-output-recipe-option-audit.md  (+919 more)
tools/ares_c0ab06_loader_handshake/: CMakeLists.txt  main.cpp
tools/libgme_audio_harness/: CMakeLists.txt  main.cpp
(+11003 files in other folders)
